[package]
name = "suduxu_rust"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "A Rust-API for Suduxu-ABI. This crate is used to interact with the Suduxu-ABI and provides a safe and ergonomic interface for Rust developers."
homepage = "https://suduxu.com"
readme = "README.md"
repository = "https://github.com/Suduxu/Suduxu-Rust"
keywords = ["suduxu", "contoller", "api", "themes", "sensor"]
exclude = [
    "/DLL/**",
    "/LICENSE",
]

[dependencies]
libloading = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
ctrlc = "3.5.2"
serde_json = "1.0.150"
chrono = "0.4.44"